# uptime-monitor

./: Cargo.toml
migrations/: 20240226194909_init.sql  20240226214147_add_website_alias.sql  20240227185400_drop_website_alias.sql
src/: database.rs  domain.rs  error.rs  lib.rs  main.rs  pages.rs
templates/: base.html  index.html  single_website.html
