[package]
name = "uptime-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["clock", "serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
